[package]
name = "citizenofthecloud"
version = "0.1.0"
edition = "2021"
authors = ["citizenofthecloud.com"]
description = "Identity and authentication SDK for autonomous AI agents"
license = "MIT"
repository = "https://github.com/citizenofthecloud/sdk-rust"
keywords = ["ai", "agents", "identity", "authentication", "ed25519"]
categories = ["authentication", "cryptography"]

[dependencies]
ed25519-dalek = { version = "2", features = ["pem", "rand_core"] }
rand = "0.8"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
pem = "3"
pkcs8 = { version = "0.10", features = ["ed25519", "alloc"] }
thiserror = "1"
urlencoding = "2"
